Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Ada/DriverExamples/wrappers/timefuncdll.ads


    -- Converts a year and a number of days to a time in ds50UTC. 
    -- Partial days may be returned.
    function YrDaysToUTC
        (year              :         Integer;
        dayOfYear          :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "YrDaysToUTC";

    -- Converts a time in ds50UTC to a year and day of year.
    -- The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will yield Year=1956, Day=1.0.
    procedure UTCToYrDays
        (ds50UTC           :         Long_Float;
        year               : out     Integer;
        dayOfYear          : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "UTCToYrDays";

    -- Converts a set of time components (year, day of year, hour, minute, second) to a time in ds50UTC. 
    -- Partial days may be returned.
    -- See "TimeComps2ToUTC" for a function which takes a month and day instead of a day of year value.
    function TimeComps1ToUTC
        (year              :         Integer;
        dayOfYear          :         Integer;
        hh                 :         Integer;
        mm                 :         Integer;
        sss                :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "TimeComps1ToUTC";

    -- Converts a time in ds50UTC to its individual components (year, day of year, hour, minute, second).
    -- See "TimeComps1ToUTC" for an example.
    -- The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will be reset to that value.
    procedure UTCToTimeComps1
        (ds50UTC           :         Long_Float;
        year               : out     Integer;
        dayOfYear          : out     Integer;
        hh                 : out     Integer;
        mm                 : out     Integer;
        sss                : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "UTCToTimeComps1";

    -- Converts a set of time components (year, month, day of month, hour, minute, second) to a time in ds50UTC. 
    -- Partial days may be returned.
    -- See "TimeComps1ToUTC" for a function which takes a day of year value instead of a month and day.
    function TimeComps2ToUTC
        (year              :         Integer;
        mon                :         Integer;
        dayOfMonth         :         Integer;
        hh                 :         Integer;
        mm                 :         Integer;
        sss                :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "TimeComps2ToUTC";

    -- Converts a time in ds50UTC to its individual components (year, month, day of month, hour, minute, second).
    -- See "TimeComps1ToUTC" for an example.
    -- The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will be reset to that value.
    procedure UTCToTimeComps2
        (ds50UTC           :         Long_Float;
        year               : out     Integer;
        month              : out     Integer;
        dayOfMonth         : out     Integer;
        hh                 : out     Integer;
        mm                 : out     Integer;
        sss                : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "UTCToTimeComps2";

    -- Computes right ascension of Greenwich at the specified time in ds50UT1. 
    -- The Fk constants as you currently have them set up in EnvConst.dll are used.
    -- EnvConst.dll is not marked as a direct dependency of TimeFunc.dll. However, it obviously must be loaded in order to be able to use this function since you must first obtain a handle via the EnvGetFkPtr() function.
    function ThetaGrnwch
        (ds50UT1           :         Long_Float;
        lenvFk             :         Long_Long_Integer) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "ThetaGrnwch";

    -- Computes right ascension of Greenwich at the specified time in ds50UT1 using the Fourth Fundamental Catalogue (FK4).
    -- There is no need to load or initialize EnvConst.dll when computing right ascension using this function.
    function ThetaGrnwchFK4
        (ds50UT1           :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "ThetaGrnwchFK4";

    -- Computes right ascension of Greenwich at the specified time in ds50UT1 using the Fifth Fundamental Catalogue (FK5).
    -- There is no need to load or initialize EnvConst.dll when computing right ascension using this function.
    function ThetaGrnwchFK5
        (ds50UT1           :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "ThetaGrnwchFK5";

    -- This function is intended for future use.  No information is currently available.
    -- This function is intended for future use.  No information is currently available.
    procedure TimeConvFrTo
        (funcIdx           :         Integer;
        frArr              : in      Double1D_Ptr;
        toArr              : out     Double1D_Ptr)
    with Import => True,
        Convention => C,
        External_Name => "TimeConvFrTo";

    -- Returns prediction control parameters. The parameters are placed in the reference variables passed to this function.
    procedure Get6P
        (startFrEpoch      : out     Integer;
        stopFrEpoch        : out     Integer;
        startTime          : out     Long_Float;
        stopTime           : out     Long_Float;
        interval           : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "Get6P";

    -- Sets prediction control parameters.
    procedure Set6P
        (startFrEpoch      :         Integer;
        stopFrEpoch        :         Integer;
        startTime          :         Long_Float;
        stopTime           :         Long_Float;
        interval           :         Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "Set6P";

    -- Returns current prediction control parameters in form of a 6P-Card string.
    procedure Get6PCardLine
        (card6PLine        : out     String)
    with Import => True,
        Convention => C,
        External_Name => "Get6PCardLine";
        --card6PLine         : String    (1..512);

    -- Returns the time span of the loaded timing constants - the earliest and latest of loaded timing constant records
    procedure TConTimeSpan
        (numOfRecs         : out     Integer;
        frTimeDs50UTC      : out     Long_Float;
        toTimeDs50UTC      : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "TConTimeSpan";


end TimeFuncDll;

-- ========================= End of auto generated code ==========================
